# photo-vault

./: .dockerignore  .env.example  .gitignore  AUDIT-2026-07-03.md  CLAUDE.md  DOCKER.md  Dockerfile  FEATURE-REQUEST-9router-integration.md  LICENSE  Makefile  README.md  TODO-2026-07-04-session.md  docker-compose.yml  pre-commit.sh  pyproject.toml  start.bat  start.sh
src/: albums.py  api.py  backup.py  catalog_db.py  clustering.py  constants.py  db.py  dupes.py  embeddings.py  faces.py  folders.py  geocode.py  imaging.py  indexer.py  ingest.py  jobs.py  metadata.py  platformfs.py  ratelimit.py  scanner.py  search.py  security.py  serve.py  settings.py  tagger.py  transcribe.py  trash.py  validator.py  video.py  vision.py
tests/: conftest.py  test_albums.py  test_api.py  test_backup.py  test_catalog_db.py  test_clustering.py  test_constants.py  test_dupes_trash.py  test_embeddings.py  test_faces.py  test_geocode.py  test_indexer.py  test_ingest.py  test_jobs.py  test_platformfs.py  test_ratelimit.py  test_scanner.py  test_search.py  test_tagger.py  test_validator.py  test_video.py  test_vision.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: manifest.webmanifest  sw.js
web/src/: App.svelte  app.css  main.js
web/src/lib/: AlbumsTab.svelte  ErrLine.svelte  FolderPicker.svelte  IndexTab.svelte  JobPanel.svelte  Lightbox.svelte  MapTab.svelte  PeopleTab.svelte  PhotoGrid.svelte  SearchTab.svelte  SectionHead.svelte  StatusPill.svelte  TimelineTab.svelte  api.js  keyboard.js  stores.js
