[project]
name = "photo-vault"
version = "0.1.0"
description = "Google Photos-like local photo search — index, search by face/scene/occasion/weather, browse by year"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "chromadb>=0.4.0",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "pillow-heif>=0.14.0",
    "exifread>=3.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "opencv-python-headless>=4.13.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.16.0"]
dev = ["pytest>=7.0.0", "httpx>=0.27"]

[build-system]
requires      = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
